Update dependencies and improve test method naming conventions
Signed-off-by: Patrick Baumgartner <contact@patbaumgartner.com>