@@ -2,8 +2,8 @@ package org.springframework.samples.petclinic.system;
 
 import org.junit.jupiter.api.Test;
 
-import java.io.IOException;
-import java.nio.file.*;
+import java.nio.file.Files;
+import java.nio.file.Path;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -37,8 +37,8 @@ public class I18nPropertiesSyncTest {
 	private static final Pattern HAS_TH_TEXT_ATTRIBUTE = Pattern.compile("th:(u)?text\\s*=\\s*\"[^\"]+\"");
 
 	@Test
-	public void checkNonInternationalizedStrings() throws IOException {
-		Path root = Paths.get("src/main");
+	void checkNonInternationalizedStrings() throws Exception {
+		Path root = Path.of("src/main");
 		List<Path> files;
 
 		try (Stream<Path> stream = Files.walk(root)) {
@@ -56,8 +56,9 @@ public class I18nPropertiesSyncTest {
 				String line = lines.get(i).trim();
 
 				if (line.startsWith("//") || line.startsWith("@") || line.contains("log.")
-						|| line.contains("System.out"))
+						|| line.contains("System.out")) {
 					continue;
+				}
 
 				if (file.toString().endsWith(".html")) {
 					boolean hasLiteralText = HTML_TEXT_LITERAL.matcher(line).find();
@@ -83,9 +84,9 @@ public class I18nPropertiesSyncTest {
 	}
 
 	@Test
-	public void checkI18nPropertyFilesAreInSync() throws IOException {
+	void checkI18nPropertyFilesAreInSync() throws Exception {
 		List<Path> propertyFiles;
-		try (Stream<Path> stream = Files.walk(Paths.get(I18N_DIR))) {
+		try (Stream<Path> stream = Files.walk(Path.of(I18N_DIR))) {
 			propertyFiles = stream.filter(p -> p.getFileName().toString().startsWith(BASE_NAME))
 				.filter(p -> p.getFileName().toString().endsWith(PROPERTIES))
 				.toList();
@@ -115,8 +116,9 @@ public class I18nPropertiesSyncTest {
 			String fileName = entry.getKey();
 			// We use fallback logic to include english strings, hence messages_en is not
 			// populated.
-			if (fileName.equals(baseFile) || fileName.equals("messages_en.properties"))
+			if (fileName.equals(baseFile) || "messages_en.properties".equals(fileName)) {
 				continue;
+			}
 
 			Properties props = entry.getValue();
 			Set<String> missingKeys = new TreeSet<>(baseKeys);
